--- a/CatalogoDeNegocio/CarritoWeb/CarritoWeb.csproj
+++ b/CatalogoDeNegocio/CarritoWeb/CarritoWeb.csproj
@@ -113,6 +113,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="Default.aspx" />
     <Content Include="Error.aspx" />
     <Content Include="favicon.ico" />
